Fixed alignment in chip

--- a/src/kirby/components/chip/chip.component.scss
+++ b/src/kirby/components/chip/chip.component.scss
@@ -1,12 +1,16 @@
 @import "../../scss/web-imports";
 
+$chip-height: 30px;
+
 :host {
   white-space: nowrap;
-  padding: 0 25px;
-  height: 30px;
+  padding: 0 size("s");
+  height: $chip-height;
   font-size: font-size("s");
-  line-height: line-height("xl");
-  border-radius: 25px;
+  line-height: 1;
+  display: inline-flex;
+  align-items: center;
+  border-radius: $chip-height;
   margin-right: 5px;
   cursor: pointer;
   &:hover,
